# medm

./: .gitignore  LICENSE  README.md  activate  mc.sh  pyproject.toml  requirements.txt
medm/: __init__.py  __main__.py  compress.py  convert.py  cut.py  qr.py
